--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,14 @@ address{
 .navbar-dark {
     background-color: #512DA8;
 }
+
+.page-enter {
+    opacity: 0.01;
+    transform: translateX(-100%);
+}
+
+.page-enter-active {
+    opacity: 1;
+    transform: translateX(0%);
+    transition: all 300ms ease-in;
+}
