Styled Store cards for mobile and ipad

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ h3 {
 .cardTitle {
     font-family: 'Roboto Condensed', sans-serif;
     color: white;
-    font-size: 48pt;
+    font-size: 6vh;
     opacity: 0.5;
 }
 
