minor bug fixes for inital state with no reviews

--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,11 @@ h3 {
     color: orange;
     opacity: 0.5;
 }
+
+.bg {
+    background-image: url("http://localhost:3001/images/home.png");
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
