--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,12 @@ h3 {
     opacity: 0.5;
 }
 
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  [class*="cardTitle"] {
+    font-size: 20pt;
+  }
+}
+
 .card:hover .cardTitle {
     opacity: 1;
 }
