--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     margin:0px auto;
     padding: 50px 0px 50px 0px;
     border-bottom: 1px ridge;
-    min-height:400px;
+    min-height: 400px;
 }
 
 .footer{
@@ -18,7 +18,7 @@
 .jumbotron {
     padding:70px 30px 70px 30px;
     margin:0px auto;
-    background: #659DBD ;
+    background: #659DBD;
     color:floralwhite;
     font-family: 'Raleway', sans-serif;
 }
@@ -109,4 +109,20 @@ h3 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.textbox {
+    border-radius: 10px;
+    padding: 20px;
+    font-family: 'Raleway', sans-serif;
+    color: #696969;
+    font-size: 14pt;
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.cardbg {
+    background: floralwhite;
 }
